@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = lolin32-example-bleled
+default_envs = nodemcuv2-example-skeleton
 
 [env]
 framework = arduino
