@@ -4,6 +4,7 @@ iotsa 2.3 - in progress
 - Added IotsaBatteryMod which enables power-saving for battery-operated devices.
 - Fixed building of iotsa without WiFi support
 - Refactored various classes to enable wifi-less operation and different webserver implementations
+- Added IotsaInput module for handling buttons, touchpads and rotary encoders.
 
 iotsa 2.2 - 03-Dec-2019
 
